Web worker and DOM files

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
   <head>
     <title>My home page</title>
   </head>
+  <script src=intenseloop.js></script>
   <body>
-    <h1>My home page</h1>
-    <p>Hello, I am Marijn and this is my home page.</p>
-    <p>I also wrote a book! Read it
+    
+    <h1>My home page</h1><!---Change some body to see effect--->
+    <p>Hello, I am naman and this is my home page.</p>
+    <p>I also wrote a book! READ it
       <a href="http://eloquentjavascript.net">here</a>.</p>
   </body>
-  <script src=DOMmodel.js></script>
+
 </html>
